--- a/app/elements/app-list/app-list.html
+++ b/app/elements/app-list/app-list.html
@@ -8,6 +8,7 @@
 <link rel="import" href="../discount-display-card/discount-display-card.html">
 <link rel="import" href="../walkin-analysis-card/walkin-analysis-card.html">
 <link rel="stylesheet" type="text/css" href="../../styles/styles.css">
+<link rel="import" href="../Transport/zonetostudent-card/zonetostudent-card.html">
   <dom-module id="app-list">
   <template>
   <style>
@@ -350,7 +351,11 @@
               <transportdaily-collection-report></transportdaily-collection-report>
             </div>
           </section>  
-          
+          <!-- <section data-category="zonetostudent-card">
+            <div class="col-md-12">
+              <zonetostudent-card></zonetostudent-card>
+            </div>
+          </section>  -->
           </iron-pages>
           </div>
           </div>
