--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -302,3 +302,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="transport-editdelete-cheque-itemcard/transport-editdelete-cheque-itemcard.html">
 <link rel="import" href="transportdaily-collection-report/transportdaily-collection-report.html">
 <link rel="import" href="zonetostudent-card/zonetostudent-card.html">
+<link rel="import" href="transport-service/transport-service.html">
+<link rel="import" href="fromdatepicker-card/fromdatepicker-card.html">
+<link rel="import" href="todatepicker-card/todatepicker-card.html">
