--- a/app/elements/zonetostudent-card/zonetostudent-card.html
+++ b/app/elements/zonetostudent-card/zonetostudent-card.html
@@ -1,39 +1,189 @@
-<!--
-@license
-Copyright (c) 2015 The Polymer Project Authors. All rights reserved.
-This code may only be used under the BSD style license found at http://polymer.github.io/LICENSE.txt
-The complete set of authors may be found at http://polymer.github.io/AUTHORS.txt
-The complete set of contributors may be found at http://polymer.github.io/CONTRIBUTORS.txt
-Code distributed by Google as part of the polymer project is also
-subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
--->
-
 <link rel="import" href="..\..\bower_components/polymer/polymer.html">
-
 <dom-module id="zonetostudent-card">
-  <template>
-    <style>
-      :host {
-        display: block;
-      }
-    </style>
-    <div>Hello from <span>{{foo}}</span></div>
-  </template>
-  <script>
-  (function() {
-    'use strict';
+<template>
+<style type="text/css">
+</style>
 
-    Polymer({
-      is: 'zonetostudent-card',
+<div class="row enquiry-form">
+      <div class="list-group col-sm-12 panel-body form-category">
+      <div class="col-sm-4 enquiry-input">
+       <paper-input  label="Student Name" is="" value="{{value}}" on-keydown="FnSearchStudent"></paper-input>
+       <paper-listbox class="dropdown-content" id="zoneallocationinput" on-iron-select="FnSelectStudent">
+          <template is="dom-repeat" items="{{itemArray}}" as="item">
+            <paper-item value="{{item.admission_no}}">{{item.itemdes}}</paper-item>
+          </template>
+       </paper-listbox>
+      </div>
+      <div class="col-sm-4 enquiry-input">
+       <paper-input id="zoneallocationid" label="Student Id" value="{{studentid}}"></paper-input>
+      </div>
+      <div class="col-sm-4 enquiry-input">
+       <paper-input id="zoneallocationparent" label="Parent Name" value="{{parentname}}"></paper-input>
+      </div>
+      </div>
+      <div class="list-group col-sm12 panel-body form-category"> 
+        <div class="col-sm-4 enquiry-input">
+        <paper-input id="zoneallocationgrade" label="Grade" value="{{grade}}"></paper-input>
+        </div>      
+        <div class="col-sm-4 enquiry-input">
+          <paper-dropdown-menu label="Zone" >
+            <paper-menu id="zoneallocationzone" class="dropdown-content" required on-iron-select="FnSelectZone" valueattr="value" >
+              <template  is="dom-repeat" items="{{zonearr}}" as="item">
+              <paper-item value="{{item.distance_id}}">{{item.zone_name}}</paper-item>
+              </template>
+            </paper-menu>
+          </paper-dropdown-menu>
+        </div>
+        <div class="col-sm-4 enquiry-input">
+        <paper-input id="zoneallocationfees" label="Fees" value="{{fees}}" readonly></paper-input>
+        </div> 
+      </div>
+      <div class="list-group col-sm12 panel-body form-category"> 
+        <div class="col-sm-4 enquiry-input" style="margin-left: 40%;">
+        <paper-button on-click="FnSubmit" class="btn btn-primary center">Submit</paper-button>
+        <paper-button on-click="FnCancel" class="btn btn-primary center">Cancel</paper-button>
+        </div>
+        <!-- <div class="col-sm-4 enquiry-input"> -->
+        
+        <!-- </div> -->
+      </div>
+</div>
 
-      properties: {
-        foo: {
-          type: String,
-          value: 'zonetostudent-card',
-          notify: true
+<transportfee-service id="service"></transportfee-service>
+</template>
+
+<script>
+(function() { 
+  var item=[];
+  var zoneid="";
+  var zonename="";
+Polymer({
+    is: "zonetostudent-card",
+      ready: function() 
+      {
+        this.value="";
+        this.$.zoneallocationinput.style.visibility='hidden';
+      },
+      FnSelectZone:function(e){
+        zonename = e.target.selectedItem.textContent.trim();
+        zoneid = e.target.selectedItem.value.trim();
+        this.$.service.fetchzonefeeService(zoneid);
+      },
+      FnSubmit:function(){
+        if(this.studentid==""||this.studentid==null||this.fees==""||this.fees==null||zonename==""||zonename==null){
+        if(this.studentid==""||this.studentid==null){
+          this.$.zoneallocationid.validate();
+        }
+        if(this.fees==""||this.fees==null){
+          this.$.zoneallocationfees.validate();
+        }
+        if(zonename==""||zonename==null){
+          alert('Please select zone!!');
+        }
+        }
+        else
+        this.$.service.FnAllocateZone(this.studentid,this.studentname,this.grade,this.fees,zonename,zoneid,this.parentname);
+      },
+      FnCancel:function(){
+        this.FnRefresh();
+      },
+      callService:function(){
+        this.$.service.fetchallstudentforzoneService();
+      },
+      autocompletearr:function(autocompletearr)
+      {
+         item=autocompletearr;
+      },
+      FnSearchStudent:function(e){
+      if(e.keyCode==13|| e.keyCode==40)
+      this.querySelector('#zoneallocationinput').focus();
+      var arr=[];
+      arr.push({"itemdes":"-----Select-----"});
+      this.querySelector('#zoneallocationinput').style.visibility='visible';
+      if(e.keyCode==8){
+        this.itemflag="true";
+        this.itemval="";
+        var len=(this.value).length;
+        if(len<=1){
+          this.querySelector('#zoneallocationinput').style.visibility='hidden';
+          this.itemArray="";
+          this.itemval="";
+        }
+        if(len>1){
+          this.querySelector('#zoneallocationinput').style.visibility='visible';
+          var backsubval=(((this.value).substring(0,(len-1))).trim()).toUpperCase();
+          for(var i=0;i<item.length;i++)
+          {
+            var subval=((item[i].student_name).trim()).substring(0,backsubval.length);
+            if((item[i].student_name).toUpperCase().indexOf((this.value).toUpperCase())!=-1)
+            {
+              var obj={"itemdes":"","enquiry_no":""};
+              obj.itemdes=item[i].student_name;
+              obj.admission_no=item[i].admission_no;
+              arr.push(obj);
+            }
+          }
+          this.itemArray=arr;
         }
       }
-    });
-  })();
-  </script>
+      if(e.keyCode!=8&& e.keyCode!=16&& e.keyCode!=13 && e.keyCode!=38&&e.keyCode!=40&&e.keyCode!=37&&e.keyCode!=39){
+        if(this.itemflag=="true") {
+          this.itemval = (this.value).toUpperCase()+String.fromCharCode((e.keyCode)).toUpperCase();
+          this.itemflag="false";
+        }
+        else
+        this.itemval = this.value +String.fromCharCode((e.keyCode));
+        if(this.itemval.length>0)
+        {
+          for(var i=0;i<item.length;i++)
+          {
+            var subval=((item[i].student_name).trim()).substring(0,this.itemval.length);
+            if((item[i].student_name).toUpperCase().indexOf((this.itemval).toUpperCase())!=-1)
+            {
+              var obj={"itemdes":"","enquiry_no":""};
+              obj.itemdes=item[i].student_name;
+              obj.admission_no=item[i].admission_no;
+              arr.push(obj);
+            }
+          }
+          if(arr.length>0)
+            this.itemArray=arr;
+          else
+          {
+            var obj={"itemdes":"","enquiry_no":""};
+            obj.itemdes="No items found";
+            arr.push(obj);
+            this.itemArray=arr;
+          }
+        }
+      }
+    },
+    FnSelectStudent:function(e){
+    this.querySelector('#zoneallocationinput').style.visibility='hidden';
+    var studentname = e.target.selectedItem.textContent.trim();
+    var studentid = e.target.selectedItem.value.trim();
+    localStorage.setItem("curr_sess_studentid",studentid);
+    localStorage.setItem("curr_sess_studentname",studentname);
+    this.itemArray=[];
+    document.querySelector('#zoneallocationinput').selected=-1;
+    this.value=studentname;
+    this.$.service.fetchStudentInfoForZoneAllocation(studentid);
+    },
+    FnRefresh:function(){
+      document.querySelector('#zoneallocationinput').selected=-1;
+      document.querySelector('#zoneallocationzone').selected=-1;
+      this.querySelector('#zoneallocationinput').style.visibility='hidden';
+      this.itemArray=[];
+      this.value="";
+      this.studentid="";
+      this.parentname="";
+      this.fees="";
+      // this.zonearr="";
+      this.grade="";
+      zoneid="";
+      zonename="";
+    }
+  });
+})();
+</script>
 </dom-module>
