--- a/app/elements/transport-editdelete-cheque-itemcard/transport-editdelete-cheque-itemcard.html
+++ b/app/elements/transport-editdelete-cheque-itemcard/transport-editdelete-cheque-itemcard.html
@@ -5,12 +5,17 @@
 <dom-module id="transport-editdelete-cheque-itemcard">
   <template>
     <style>
+    p{
+      width: 10%;
+    }
+    div{
+      @apply(--layout-horizontal);
+    }
     </style>
     <div>
-      <table>
-      <tr>
-        <td>{{sno}}</td><td>{{studentid}}</td><td>{{studentname}}</td><td>{{installmenttype}}</td><td>{{chequeno}}</td><td>{{bankname}}</td><td>{{chequedate}}</td><td hidden$="{{hidebtn}}"><button class="btn" on-click="FnEditDeleteCheque" data-toggle="modal" data-target="#studentfollowup"><a>Edit/Delete</a></button></td>
-      </tr>
+      
+        <p>{{sno}}</p><p>{{studentid}}</p><p style="margin-left:5%;">{{studentname}}</p><p style="margin-left:5%;">{{installmenttype}}</p><p style="margin-left:5%;">{{chequeno}}</p><p style="margin-left:5%;">{{bankname}}</p><p style="margin-left:5%;">{{chequedate}}</p><p hidden$="{{hidebtn}}"><button class="btn" on-click="FnEditDeleteCheque" data-toggle="modal" data-target="#studentfollowup"><a>Edit/Delete</a></button></p>
+      
     </div>
     <div>
     <paper-dialog id="transporteditdeletecheque" modal>
