--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -305,3 +305,4 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="transport-service/transport-service.html">
 <link rel="import" href="fromdatepicker-card/fromdatepicker-card.html">
 <link rel="import" href="todatepicker-card/todatepicker-card.html">
+<link rel="import" href="zoneinstallment-card/zoneinstallment-card.html">
