--- a/app/elements/transportfee-installment-card/transportfee-installment-card.html
+++ b/app/elements/transportfee-installment-card/transportfee-installment-card.html
@@ -404,6 +404,7 @@
         installmentarr.push(obj);
         // alert(JSON.stringify(installmentarr));
         document.querySelector('transportfee-card').FnSetfee(installmentarr);
+        document.querySelector('zonetostudent-card').FnSetfee(installmentarr);
         // installmentarr=[]; 
       },
       FnRefresh:function(){
